# electronic-common-arduino

./: .gitmodules  CMakeLists-ignore.txt  CMakeLists.txt
src/: polyfill.h
src/com/osteres/arduino/util/: StringConverter.h  VccReader.h
src/com/osteres/automation/arduino/: ArduinoApplication.h  ScreenArduinoApplication.h
src/com/osteres/automation/arduino/action/: ArduinoActionManager.h  DateTimeAction.h  IdentifierSetter.h  SensorIdentifierAction.h  TransmitBatteryLevelAction.h
src/com/osteres/automation/arduino/component/: BatteryLevel.h  DataBuffer.h  Screen.h
src/com/osteres/automation/arduino/display/: Device.h  Output.h
src/com/osteres/automation/arduino/display/device/: Screen.h
src/com/osteres/automation/arduino/memory/: PinProperty.h  StoredProperty.cpp  StoredProperty.h  StoredPropertyManager.h  Value.cpp  Value.h
src/com/osteres/automation/arduino/sample/: SampleApplication.h
src/com/osteres/automation/arduino/transmission/: ArduinoRequester.cpp  ArduinoRequester.h
